<resources>
    <string name="app_name">RecipeApp</string>
    <string name="text_welcome">Welcome</string>
    <string name="sign_in">Sign in to continue</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="text_login">Login</string>
    <string name="new_member">New Member?</string>
    <string name="text_register">Register</string>
    <string name="get_started">Get Started</string>
    <string name="create_account">Create an account</string>
    <string name="email">Email</string>
    <string name="already_a_member">Already A Member?</string>
    <string name="forgotten_password">Forgotten Your Password?</string>
    <string name="text_forgot_password">Enter your email address and we would send you a link to reset your password</string>
    <string name="send_email">Send Email</string>
    <string name="check">Check your e-mail</string>
    <string name="text_check">We have send your a reset password link on your registered e-mail address.</string>
    <string name="home">Home</string>
    <string name="add">Add</string>
    <string name="saved">Saved</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_yes">Yes</string>
    <string name="text_update">Update</string>
    <string name="sign_out">Sign Out</string>
    <string name="jenis">Jenis</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="fragment_add">Fragment Add</string>
    <string name="fragment_bookmark">Fragment Bookmark</string>
    <string name="fragment_home">Fragment Home</string>
</resources>