<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <ImageButton
        android:id="@+id/ib_back_regis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:src="@drawable/ic_arrow_back"
        android:layout_marginTop="@dimen/_16dp"
        android:layout_marginStart="@dimen/_16dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_started"
            android:layout_marginTop="55dp"
            android:layout_marginStart="@dimen/_16dp"
            android:textSize="@dimen/_35sp"
            android:textStyle="bold"
            android:textColor="@color/Green"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:layout_marginStart="@dimen/_16dp"
            android:textSize="@dimen/_22sp"
            android:textColor="@color/dark_green"
            android:textStyle="bold"/>
    </LinearLayout>

    <EditText
        android:layout_width="@dimen/_379dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_60dp"
        android:hint="@string/username"
        android:textSize="@dimen/_18sp"
        android:textColor="@color/grey"
        android:layout_marginStart="@dimen/_16dp"/>

    <EditText
        android:layout_width="@dimen/_379dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_50dp"
        android:hint="@string/email"
        android:textSize="@dimen/_18sp"
        android:textColor="@color/grey"
        android:layout_marginStart="@dimen/_16dp"/>

    <EditText
        android:layout_width="@dimen/_379dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_50dp"
        android:hint="@string/password"
        android:textSize="@dimen/_18sp"
        android:textColor="@color/grey"
        android:layout_marginStart="@dimen/_16dp"/>

    <Button
        android:layout_width="378dp"
        android:layout_height="64dp"
        android:background="@drawable/background_button"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_60dp"
        android:text="@string/text_register"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_a_member"/>

        <TextView
            android:id="@+id/tv_login_regis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_login"
            android:textStyle="bold"
            android:textColor="@color/black"/>
    </LinearLayout>

</LinearLayout>