<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/_16dp"
    tools:context=".LoginActivity"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_back"
        android:layout_marginTop="@dimen/_16dp"
        android:layout_marginStart="@dimen/_16dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_welcome"
            android:layout_marginTop="55dp"
            android:layout_marginStart="@dimen/_16dp"
            android:textSize="@dimen/_35sp"
            android:textStyle="bold"
            android:textColor="@color/Green"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:layout_marginStart="@dimen/_16dp"
            android:textSize="@dimen/_22sp"
            android:textColor="@color/dark_green"
            android:textStyle="bold"/>
    </LinearLayout>

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxLines="1" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="@color/red"
        android:layout_marginStart="@dimen/_19dp"
        android:textSize="@dimen/_19sp"/>

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="@dimen/_350dp"
        android:layout_height="@dimen/_64dp"
        android:background="@drawable/background_button"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_60dp"
        android:layout_marginRight="@dimen/_16dp"
        android:layout_marginLeft="@dimen/_16dp"
        android:text="@string/text_sign_in"/>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/btn_google_sign_in"
        android:layout_width="@dimen/_350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_30dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_member"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textStyle="bold"
            android:textColor="@color/Green"/>
    </LinearLayout>


</LinearLayout>